--- a/src/helpers/lang/en.json
+++ b/src/helpers/lang/en.json
@@ -1,4 +1,10 @@
 {
+    "loading":"Loading...",
+    "welcomeMessage":"Welcome to my Portfolio, I'm... 🇩🇴👋",
+    "firstHistory":"A Passionate .NET FullStack Developer from a Beautiful Island in the Caribbean Sea\n\n\n🇩🇴 (Dominican Republic)",
+    "secondHistory":"With Experience in different Programming Languages, Frameworks and Library Like React for the Front-End and ASP.NET to build website and Restful API using (C#) for the Back-End.",
+    "thirdHistory":"My Journey through the programming started when i was 10 years old for a game, past the time i learned HTML, CSS and JS, after that learned C# in high school and improved on that programming language at ITLA.",
     "navHome":"Home",
+    "navProjects":"Projects",
     "programmingLang":"Programming Languages and Tools"
 }
