--- a/src/helpers/lang/es.json
+++ b/src/helpers/lang/es.json
@@ -6,7 +6,20 @@
     "thirdHistory":"Mi jornada a través de la programación comenzó cuando tenía 10 años de edad por un juego, pasado el tiempo aprendí HTML, CSS y JS, después de eso aprendí C# en la secundaria y mejorando en dicho lenguaje de programación en ITLA.",
     "navHome":"Inicio",
     "navProjects":"Proyectos",
-    "programmingLang":"Lenguajes de Programacion y Herramientas",
+    "programmingLang":"Habilidades",
     "emailSuccess":"el correo fue enviado correctamente, estare en contacto pronto...",
-    "emailError":"algo salio mal..."
+    "emailError":"algo salio mal...",
+    "about":"Sobre este proyecto",
+    "collab":"Colaboradores:",
+    "projects":"Projectos",
+    "porfolioDesc":"Este sitio web contiene mis proyectos y más información sobre mí.",
+    "bankingDesc":"Dominican Banking es una aplicación en la que puede agregar clientes, también agregarles una nueva cuenta bancaria, préstamo y tarjeta de crédito en el sistema y realizar pagos y transacciones diferentes utilizando un cliente.",
+    "pokedexDesc":"Pokedex es una aplicación donde puedes agregar un pokemon con su tipo y región, eliminar y editar este pokemon. Con hermosa interfaz de usuario.",
+    "trailerDesc":"FLJJ Movies es una aplicación creada con React y Vanilla Javascript donde puedes ver avances de películas, esta aplicación consume una API creada con ASP .NET MVC y C#.",
+    "marketDesc":"La aplicación EMarket es como Corotos, donde las personas hacen anuncios de productos y buscan personas que puedan estar interesadas en ese producto. Usando Arquitectura Onion.",
+    "networkDesc":"SmartNetwork es una aplicación interesante en la que puedes agregar amigos y hacer publicaciones sobre tu vida o algo que te guste.",
+    "restaurantDesc":"RestaurantAPI es una API para consumir en un sistema de restaurante. Uso de Identity y JWT para la Autenticación y Autorización.",
+    "trailerapiDesc":"TrailerMovieAPI es una API para consumir en una aplicación usando React y Vanilla JS donde puedes ver avances de películas.",
+    "estateDesc":"DR Real Estate es una aplicación donde usted, un agente, puede publicar casas para vender y conseguir un cliente en República Dominicana. El cliente también agrega la casa a favoritos, encuentra un agente o la casa de sus sueños y puede obtener una cuenta en el sitio web.",
+    "diamondDesc":"Es una aplicación móvil que utiliza React Native y Fake JSON API y busca la música para reproducirla en el teléfono, también puede agregarla a favoritos."
 }
