Education Timeline and Projects animation

--- a/src/helpers/lang/en.json
+++ b/src/helpers/lang/en.json
@@ -12,6 +12,8 @@
     "about":"About this Project",
     "collab":"Collaborators:",
     "projects":"Projects",
+    "education":"Education",
+    "contacts":"Contacts",
     "porfolioDesc":"This website contain my projects and more information about me.",
     "bankingDesc":"Dominican Banking is an app where you can add customer, also add them a new bank account, loan and credit card in the system and make payment and different transaction using a customer.",
     "pokedexDesc":"Pokedex is an app where you can add a pokemon with its type and region, delete and edit this pokemon. With beautiful UI Interface.",
