--- a/src/helpers/lang/es.json
+++ b/src/helpers/lang/es.json
@@ -12,6 +12,8 @@
     "about":"Sobre este proyecto",
     "collab":"Colaboradores:",
     "projects":"Projectos",
+    "education":"Educación",
+    "contacts":"Contactos",
     "porfolioDesc":"Este sitio web contiene mis proyectos y más información sobre mí.",
     "bankingDesc":"Dominican Banking es una aplicación en la que puede agregar clientes, también agregarles una nueva cuenta bancaria, préstamo y tarjeta de crédito en el sistema y realizar pagos y transacciones diferentes utilizando un cliente.",
     "pokedexDesc":"Pokedex es una aplicación donde puedes agregar un pokemon con su tipo y región, eliminar y editar este pokemon. Con hermosa interfaz de usuario.",
